syntax = "proto3";

package user;

option go_package = ".pkg/pb";

service UserService{
  rpc Authenticate(AuthenticateRequest) returns (AuthenticateResponse);
}

message AuthenticateRequest{
  string token = 1;
}

message AuthenticateResponse{
  int64 status = 1;
  string error = 2;
  User user = 3;
}

message User {
  string 	userId = 1;
  string 	username = 2;
  string 	email = 3;
  string 	phoneNumber = 4;
}